--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,34 @@
-# Project settings
 cmake_minimum_required(VERSION 3.16)
-
 project(TetraEngine VERSION 0.1 LANGUAGES CXX)
 
-if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
-    set(PLATFORM_NAME "windows")
-elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-    set(PLATFORM_NAME "macos")
-elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
-    set(PLATFORM_NAME "linux")
-else()
-    set(PLATFORM_NAME "unknown")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+include(FetchContent)
+
+# Output folder for final binaries
+set(DIST_DIR ${CMAKE_SOURCE_DIR}/dist/${CMAKE_SYSTEM_NAME}/$<CONFIG>)
+
+# Platform-specific settings
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
+# --- EXTERNAL LIBRARIES --- 
+# SDL
+set(SDL_SHARED OFF CACHE BOOL "Build SDL shared?" FORCE)
+set(SDL_STATIC ON  CACHE BOOL "Build SDL static?"  FORCE)
+
+if(NOT EXISTS "${CMAKE_SOURCE_DIR}/external/SDL/CMakeLists.txt")
+  message(FATAL_ERROR "SDL submodule not found in external/SDL. Run: git submodule update --init --recursive")
 endif()
 
-set(DIST_DIR ${CMAKE_SOURCE_DIR}/dist/${PLATFORM_NAME})
+FetchContent_Declare(
+  SDL3
+  SOURCE_DIR ${CMAKE_SOURCE_DIR}/external/SDL
+)
+FetchContent_MakeAvailable(SDL3)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${DIST_DIR}/bin)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${DIST_DIR}/lib)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${DIST_DIR}/lib)
-
-file(MAKE_DIRECTORY ${DIST_DIR}/bin)
-file(MAKE_DIRECTORY ${DIST_DIR}/lib)
-
+# Add your subprojects
 add_subdirectory(engine)
 add_subdirectory(editor)
