Fix some minor mistakes with math libraries & implement tests for vec, quat, mat4

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,8 @@ FetchContent_MakeAvailable(googletest)
 file(GLOB_RECURSE TEST_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/engine/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/editor/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/engine/**/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/editor/**/*.cpp
 )
 
 add_executable(run_tests ${TEST_SOURCES})
